Fixed productsForClient on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -350,13 +350,16 @@
 }
 
 .containerWithPropositionForClient {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border: 1px solid lightgray;
   width: 100%;
-  height: 380px;
+  height: 420px;
+  padding-bottom: 10px;
   padding-left: 10px;
   margin-top: 20px;
   background-color: white;
-  padding-bottom: 50px;
   position: relative;
 }
 
@@ -380,7 +383,7 @@
   position: relative;
   padding-top: 50px;
   row-gap: 15px;
-  height: 140px;
+  height: 100%;
 }
 
 .infoAboutProductsForClient {
