--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -14,9 +14,9 @@
   align-items: center;
   height: 100px;
   width: 100%;
-  background-color: white;
-  border-bottom: 5px solid black;
-  box-shadow: 0 4px 2px -2px lightgray;
+  /* background-color: white; */
+  /* border-bottom: 5px solid black; */
+  /* box-shadow: 0 4px 2px -2px lightgray; */
 }
 
 .Navbar {
@@ -114,8 +114,9 @@
   flex-shrink: 0;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  height: 40px;
   width: 100%;
+  padding: 0px 10px;
   background-color: white;
 }
 
@@ -177,25 +178,38 @@
   background-color: rgb(205, 234, 247);
 }
 
+.containerForMagnifierAndSearchInput {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-left: 20px;
+}
+
 .glass2 {
   color: gray;
-  position: relative;
-  left: 30px;
+  position: absolute;
+  left: 10px;
+  top: 20px;
 }
 
 .searchInput {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   border: 1px solid rgb(238, 238, 238);
   border-radius: 10px;
   background-color: rgb(238, 238, 238);
-  margin-right: 20px;
-  padding-left: 40px;
+  padding-left: 30px;
   padding-right: 10px;
 }
 
 .DivForButtonSearch {
   display: none;
+}
+
+.containerForDesktop {
+  padding-bottom: 10px;
+  position: relative;
+  box-shadow: 8px 7px 24px 0px rgba(66, 68, 90, 0.1);
 }
 
 @media only screen and (min-width: 768px) {
@@ -212,6 +226,8 @@
     display: flex;
     height: 140px;
     padding-top: 10px;
+    padding-bottom: 0;
+    margin-bottom: 15px;
     width: 100%;
     justify-content: center;
   }
